# pytest-regsmart

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  analise-pytest-ranking.md  pyproject.toml  run_test_local.sh  setup.py  tox.ini
.github/workflows/: ci.yml
pytest_regsmart/: args.py  const.py  help_strings.py  monitor.py  plugin.py  ranker.py  reporter.py
src/pytest_ranking/: const.py  extractor.py  help_strings.py  plugin.py  rank.py
tests/: conftest.py  fake_test_data.py  test_interop.py  test_options.py  test_pytest_ranking.py  test_ranking_heuristics.py  test_ranking_levels.py  test_replay.py
